Updated the heading

--- a/first.html
+++ b/first.html
@@ -9,6 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <h1>Welcome guys to my Website</h1>
+    Hello, Philippines!
 </body>
 </html>
