Creating new changes on html file

--- a/first.html
+++ b/first.html
@@ -9,8 +9,11 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <h1 style="color: red;">Welcome guys to my Website!!</h1>
-    Hello, Philippines!
-    <h2>Hello Guys</h2>
+    <h1>
+        Hello to the new journey of this project!
+    </h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis eius repellat ipsam dolorem eveniet, totam, facilis voluptatibus laudantium perspiciatis magnam quos hic eligendi et ad, excepturi ut molestiae sunt!
+    </p>
 </body>
 </html>
