--- a/first.html
+++ b/first.html
@@ -13,7 +13,7 @@
         Hello to the new journey of this project!
     </h1>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veritatis eius repellat ipsam dolorem eveniet, totam, facilis voluptatibus laudantium perspiciatis magnam quos hic eligendi et ad, excepturi ut molestiae sunt!
+        Hi, I am John Doe. I am a web developer. I am currently working on a project that will be launched soon. I am excited to share it with you all. I hope you will like it.
     </p>
 </body>
 </html>
