Adding new paragraph to the html file

--- a/first.html
+++ b/first.html
@@ -15,5 +15,8 @@
     <p>
         Hi, I am John Doe. I am a web developer. I am currently working on a project that will be launched soon. I am excited to share it with you all. I hope you will like it.
     </p>
+    <p>
+        Stay tuned for my next updates!
+    </p>
 </body>
 </html>
