--- a/first.html
+++ b/first.html
@@ -16,7 +16,7 @@
         Hi, I am John Doe. I am a web developer. I am currently working on a project that will be launched soon. I am excited to share it with you all. I hope you will like it.
     </p>
     <p>
-        Stay tuned for my next updates!
+        Stay tuned for my next updates! Thank you for your time and appreciation.
     </p>
 </body>
 </html>
