--- a/first.html
+++ b/first.html
@@ -7,6 +7,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <style>
+        h1 {
+            color: blue;
+        }
+        p {
+            color: green;
+        }
+    </style>
 </head>
 <body>
     <h1>
