updating the text of the said heading 1

--- a/first.html
+++ b/first.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>
-        Hello to the new journey of this project!
+        Hello to the new journey of this project
     </h1>
     <p>
         Hi, I am John Doe. I am a web developer. I am currently working on a project that will be launched soon. I am excited to share it with you all. I hope you will like it.
